Refactor tidy MigrationConfig